--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "redis": "^3.0.2",
     "serve-static": "^1.14.1",
     "session-file-store": "^1.5.0",
+    "socket.io": "^3.1.2",
     "winston": "^3.3.3"
   }
 }
